Improved CSS at different zoom levels. Still need to fix gap between content area and footer on pages with too small of content sections for the current zoom level.

--- a/themes/onlinecourseportal/styles/main.css
+++ b/themes/onlinecourseportal/styles/main.css
@@ -3,9 +3,12 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Arapey:400italic,400|Hammersmith+One:400);
 /**************** MAIN STYLES ***************/
 body {
-	margin: 0;
-	padding: 0;
 	color: #6d6e71;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
 	background: #ededed url(../images/bg.jpg) top repeat;
 }
 h1 {
@@ -40,37 +43,35 @@ h5 {
 	line-height: normal;
 	font-size: 12pt;
 }
-/**************** BASE STYLES ***************/
 
+/**************** BASE STYLES ***************/
 #page {
 	margin-top: 90px;
-	min-height: 800px;
-	padding: 0 0 20px 0;
 	overflow: hidden;
+	min-height: 100%;
+	position: relative;
 }
 #flowersLeft {
 	background: url(../images/bgleft.png);
-	background-position: right -50px bottom;
+	background-position: right bottom;
 	background-repeat: no-repeat;
 	z-index: -1;
 	position: fixed;
 	top: 0;
-	bottom: 0;
 	left: 0;
+	bottom: 0;
 	width: 50%;
-	min-height: 800px;
 }
 #flowersRight {
 	background: url(../images/bgright.png);
-	background-position: left -50px bottom;
+	background-position: left bottom;
 	background-repeat: no-repeat;
 	z-index: -1;
 	position: fixed;
 	top: 0;
-	bottom: 0;
 	right: 0;
+	bottom: 0;
 	width: 50%;
-	min-height: 800px;
 }
 #header {
 	margin: 0;
@@ -88,10 +89,9 @@ h5 {
 }
 #content {
 	padding: 0 0 20px 0;
-	margin: 0 17px;
+	margin: 0 17px 140px 17px;
 	background: #fff;
 	box-shadow: 0 0 10px #999;
-	border-radius: 5px;
 }
 #logo {
 	position: absolute;
@@ -271,8 +271,8 @@ div.breadcrumbs span {
 	padding: 3px 6px;
 	font-size: 10pt;
 }
-/************** SIDEBAR STYLES **************/
 
+/************** SIDEBAR STYLES **************/
 #sidebar {
 	width: 270px;
 	margin: 0 20px 20px 0;
@@ -405,8 +405,8 @@ div.breadcrumbs span {
 	max-height: 45px;
 	margin: 5px 8px;
 }
-/************** COLUMN STYLES **************/
 
+/************** COLUMN STYLES **************/
 .column-wide {
 	width: 560px;
 	padding: 30px 0 30px 40px;
@@ -419,16 +419,19 @@ div.breadcrumbs span {
 	padding: 10px 2%;
 	float: left;
 }
-/************** FOOTER **************/
 
+/************** FOOTER **************/
 #footer {
-	margin: 60px 0 0 0;
+	margin: 0px 0 0 0;
 	padding: 5px 20px;
 	font-size: 12px;
 	background: #464547 url(../images/bg-foot.jpg) top center repeat-x;
 	color: #fff;
 	min-height: 130px;
 	text-align: center;
+	width: 100%;
+	position: absolute;
+	bottom: 0;
 }
 #footer .logo {
 	position: absolute;
